apps/homer/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homer
  namespace: homer
  labels:
    app.kubernetes.io/name: homer
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: homer
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homer
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: homer
          image: b4bz/homer:v24.11.3
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - protocol: TCP
              containerPort: 8088
              name: http
          volumeMounts:
            - name: www
              mountPath: /www
      volumes:
        - name: www
          hostPath:
            path: /mnt/nfs/AppData/homer/www
            type: Directory
      nodeSelector:
        kubernetes.io/os: linux
