apps/homer/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homer
  namespace: homer
  labels:
    app.kubernetes.io/name: homer
spec:
  selector:
    app.kubernetes.io/name: homer
  type: ClusterIP
  internalTrafficPolicy: Cluster
  ports:
    - protocol: TCP
      port: 8088
      targetPort: 8088
      name: http
